Fix registration form paddings and position on small screens

--- a/src/components/Registration/Registration.css
+++ b/src/components/Registration/Registration.css
@@ -16,3 +16,19 @@
   align-content: center;
   justify-content: center;
 }
+
+.registration__form {
+  display: flex;
+
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+}
+
+@media screen and (max-height: 400px) {
+  .registration__form {
+    display: block;
+
+    height: 100%;
+  }
+}
